# api-futebol

./: .env.example  .gitignore  Configurar um servidor para conexões ssh.txt  api.txt  create_tables.py  data.sql  main.py  nginx-HTTP.txt  proxy-reverso.txt  pyproject.toml  requirements.txt
api/v1/: api.py
api/v1/endpoints/: basket.py  country.py  league.py  players.py  season.py  team.py  user.py
api/v1/services/: producer.py
core/: auth.py  configs.py  deps.py  security.py
models/: __all_models.py  country_model.py  league_model.py  season_model.py  team_model.py  user_model.py
schemas/: country_schema.py  league_schema.py  season_schema.py  team_schema.py  user_schema.py
